# NetMind-AI-RS-NexusMatrix

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  HEARTBEAT.md  README.md  SKILL.md  build.sh  docker-compose.yml  pyproject.toml
deploy/synapse/: homeserver.yaml
learning_notes/: 01_matrix_protocol_basics.md  01_matrix_protocol_research.md
scripts/: create_admin.py  patrol.sh  setup_patrol.sh  setup_synapse.sh  test_service.py
skill/: build.py
skill/nexus_matrix_skill/: __init__.py  client.py  models.py  skill.py
src/nexus_matrix/: __init__.py  app.py  config.py  main.py
src/nexus_matrix/api/: __init__.py  deps.py
src/nexus_matrix/api/v1/: __init__.py  auth.py  feedback.py  heartbeat.py  messages.py  registry.py  rooms.py  router.py  sync.py
src/nexus_matrix/core/: __init__.py  auth_service.py  matrix_client_manager.py  message_service.py  room_service.py  sync_service.py
src/nexus_matrix/models/: __init__.py  auth.py  common.py  feedback.py  messages.py  registry.py  rooms.py  sync.py
src/nexus_matrix/registry/: __init__.py  registry_service.py  search_service.py
src/nexus_matrix/storage/: __init__.py  database.py
src/nexus_matrix/storage/repositories/: __init__.py  agent_repo.py  api_key_repo.py  feedback_repo.py
src/nexus_matrix/utils/: __init__.py  embedding.py  security.py
